# mylearning_api

./: Cargo.toml  README.md
src/: main.rs
src/models/: course_model.rs  course_search_model.rs  mod.rs  user_model.rs  user_search_model.rs  watched_model.rs
src/routes/: auth_route.rs  course_route.rs  course_search_route.rs  health_route.rs  mod.rs  user_route.rs  user_search_route.rs  watched_route.rs
src/services/: auth_service.rs  course_search_service.rs  course_service.rs  mod.rs  user_search_service.rs  user_service.rs  watched_service.rs
